-Brought this up to the same standard/format as the later Topology manual, which included: 	-Adding a table of contents 	-Putting my name on the title page as the author 	-Changing the labels for chapter and section headings

--- a/prelude.tex
+++ b/prelude.tex
@@ -6,8 +6,8 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 
-% Used so the PDF is hyperlinked for convenience
-\usepackage[hidelinks]{hyperref}
+% Used so the PDF is hyperlinked for convenience, and chapter/section numbers are in the PDF bookmarks
+\usepackage[bookmarksnumbered,hidelinks]{hyperref}
 
 % Used in copmlex tabular/table
 % Needed for a table in one of the solutions
@@ -25,3 +25,6 @@
 
 % Needed to make title pages without page numbers in exam class
 \usepackage{titling}
+
+% Needed for customization of section headers
+\usepackage{titlesec}
