-Made minor change to the \sol macro to always put a newline after the "Solution:" label

--- a/macros.tex
+++ b/macros.tex
@@ -111,7 +111,12 @@
     \theorem{#1}{#3}
     \setqf{}
 }
-\newcommand\sol[1]{\begin{solution} #1 \end{solution}}
+\newcommand\sol[1]{
+  \begin{solution}
+
+    #1
+  \end{solution}
+}
 
 % Main problem and theorem labels
 \def\mainprob{\textbf{Main Problem.}}
