-Added copyright notice with CC license info

--- a/prelude.tex
+++ b/prelude.tex
@@ -28,3 +28,6 @@
 
 % Needed for customization of section headers
 \usepackage{titlesec}
+
+% For Creative Commons license icons
+\usepackage[scale=1.5]{ccicons}
