--- a/theorems.tex
+++ b/theorems.tex
@@ -47,6 +47,11 @@
   \maketitle
 \end{titlingpage}
 
+\newpage
+\input{license.tex}
+
+\newpage
+
 % Apparently need this to get page number on the first real page
 \cfoot{Page \thepage}
 
