Switched to a Makefile instead of manually compiling everything and a clean script. Needing to re-acclimate myself to studying math and set theory, I am taking that opportunity to go back and work exercises for the first several chapters that I did not type up before. Solved up through exercise 1.3.3.

--- a/macros.tex
+++ b/macros.tex
@@ -26,7 +26,9 @@
 \def\al{\aleph}
 
 % Logic
+\def\imp{\rightarrow}
 \def\bic{\leftrightarrow}
+\newcommand{\propP}[1]{\prop{P}(#1)}
 
 % For set-buider notation
 \def\where{\mid}
