--- a/solutions.tex
+++ b/solutions.tex
@@ -66,6 +66,12 @@
 \begin{questions}
 
 % Chapters (sections are used since the exam class has no chapters)
+\setcounter{section}{1-1}
+
+\section{Sets}
+\setcounter{subsection}{3-1}
+\input{sections/sec_1_3.tex}
+
 \setcounter{section}{5-1}
 
 \section{Cardinal Numbers}
