--- a/sections/sec_1_3.tex
+++ b/sections/sec_1_3.tex
@@ -5,7 +5,7 @@
 }
 \sol{
   \qproof{
-    $A$ is a given an extant set.
+    $A$ is a given extant set.
     So let $\propP{x, B}$ be the property that $x \in A$ and $x \notin B$ so that clearly $\propP{x, B}$ implies that $x \in A$.
     Then, by was expounded just before Example~1.3.13, the set
     \gath{
@@ -77,7 +77,14 @@
   Show that there exists a unique set $C$ such that $x \in C$ if and only if either $x \in A$ and $x \notin B$ or $x \in B$ and $x \notin B$.
 }
 \sol{
-  TODO
+  Since $A$ and $B$ are sets, the set $A \cup B$ uniquely exists by the Axiom of Union.
+  Now let $\propP{x}$ be the property defined by $x \in A$ and $x \notin B$ or $x \in B$ and $x \notin B$.
+  Consider any $x$ such that $\propP{x}$ holds.
+  If $x \in A$ and $x \notin B$, then obviously $x \in A$.
+  On the other hand, if $x \in B$ and $x \notin A$, the obviously $x \in B$.
+  Thus, in either case, $x \in A$ or $x \in B$ so that $x \in A \cup B$.
+  Therefore, $\propP{x}$ implies that $x \in A \cup B$.
+  Therefore, clearly the set we seek is $C = \braces{x \where \propP{x}} = \braces{x \in A \cup B \where \propP{x}}$, which uniquely exists by the Axiom Schema of Comprehension.
 }
 
 \exercise{5}{
