Transfer. Starts working on the section 1.4, but so far just copied the exercise questions.

--- a/macros.tex
+++ b/macros.tex
@@ -72,7 +72,7 @@
 \def\pss{\subset}
 \def\Seq{\mathrm{Seq}}
 \def\prece{\preccurlyeq}
-\def\sd{\,\triangle\,}
+\def\sd{\bigtriangleup}
 
 % Environment shortcuts
 \newcommand\gath[1]{\begin{gather*} #1 \end{gather*}}
@@ -82,35 +82,35 @@
 % Environment for indenting nested paragraphs (useful in case trees)
 \newenvironment{indpar}
 {
-    \begin{adjustwidth}{1cm}{}
-}{
-    \end{adjustwidth}
+  \begin{adjustwidth}{1cm}{}
+    }{
+  \end{adjustwidth}
 }
 
 % Exercise, Theorem, and solution shortcuts
 \newcommand\exercise[2]{{
-    \renewcommand\label[1]{} % Needed to suppress multiply-defined label warning since the same question numbers are used in different sections
-    \setcounter{subsubsection}{#1-1} % Subsubsections are used to that lemmas have the full nested numbering
-    \stepcounter{subsubsection} % Need to increment this so that the lemma counter gets reset
-    \setcounter{question}{#1-1} % Manually set the question number since we always know the exercise number
-    \question{#2} % The actual exam class question
-}}
+      \renewcommand\label[1]{} % Needed to suppress multiply-defined label warning since the same question numbers are used in different sections
+      \setcounter{subsubsection}{#1-1} % Subsubsections are used to that lemmas have the full nested numbering
+      \stepcounter{subsubsection} % Need to increment this so that the lemma counter gets reset
+      \setcounter{question}{#1-1} % Manually set the question number since we always know the exercise number
+      \question{#2} % The actual exam class question
+    }}
 \newcommand\exerciseapp[3]{
-    \setqf{#2}
-    \exercise{#1}{#3}
-    \setqf{}
-}   
+  \setqf{#2}
+  \exercise{#1}{#3}
+  \setqf{}
+}
 \newcommand\theorem[2]{{
-    \renewcommand\label[1]{} % Needed to suppress multiply-defined label warning since the same question numbers are used in different sections
-    \setcounter{subsubsection}{#1-1} % Subsubsections are used to that lemmas have the full nested numbering
-    \stepcounter{subsubsection} % Need to increment this so that the lemma counter gets reset
-    \setcounter{question}{#1-1} % Manually set the question number since we always know the theorem number
-    \question{#2} % The actual exam class question
-}}
+      \renewcommand\label[1]{} % Needed to suppress multiply-defined label warning since the same question numbers are used in different sections
+      \setcounter{subsubsection}{#1-1} % Subsubsections are used to that lemmas have the full nested numbering
+      \stepcounter{subsubsection} % Need to increment this so that the lemma counter gets reset
+      \setcounter{question}{#1-1} % Manually set the question number since we always know the theorem number
+      \question{#2} % The actual exam class question
+    }}
 \newcommand\theoremapp[3]{
-    \setqf{#2}
-    \theorem{#1}{#3}
-    \setqf{}
+  \setqf{#2}
+  \theorem{#1}{#3}
+  \setqf{}
 }
 \newcommand\sol[1]{
   \begin{solution}
