Transfer. Working on Exercise 1.4.1.

--- a/prelude.tex
+++ b/prelude.tex
@@ -29,5 +29,12 @@
 % Needed for customization of section headers
 \usepackage{titlesec}
 
+% For diagrams (e.g. Venn diagrams in section 1.4)
+\usepackage{tikz}
+
+% TODO: Should we migrate \newcommand to this, which better enforces arguments and gives much better error messages for missing arguments
+% Useful for more advanced macro arguments (e.g. boolean values)
+\usepackage{xparse}
+
 % For Creative Commons license icons
 \usepackage[scale=1.5]{ccicons}
